--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -3,14 +3,14 @@ version: '>= 0.14.0'
 formatter: markdown table
 
 content: |-
-  [![Tests](https://github.com/netascode/terraform-aci-scaffolding/actions/workflows/test.yml/badge.svg)](https://github.com/netascode/terraform-aci-scaffolding/actions/workflows/test.yml)
+  [![Tests](https://github.com/netascode/terraform-aci-storm-control-policy/actions/workflows/test.yml/badge.svg)](https://github.com/netascode/terraform-aci-storm-control-policy/actions/workflows/test.yml)
 
-  # Terraform ACI Scaffolding Module
+  # Terraform ACI Storm Control Policy Module
 
-  Description
+  Manages ACI Storm Control Policy
 
   Location in GUI:
-  `Tenants` » `XXX`
+  `Fabric` » `Access Policies` » `Policies` » `Interface` » `Storm Control`
 
   ## Examples
 
